feat: Update dependencies for security vulnerabilities and refactor code for cleaner structure